[package]
edition = "2018"
name = "iceray"
version = "0.0.9"
authors = ["elBoberido <k.hias@gmx.de>"]
description = "Introspection TUI for Eclipse iceoryx written in Rust"
readme = "README.md"
keywords = [
    "iceoryx",
    "introspection"
]
license = "Apache-2.0"
repository = "https://github.com/elBoberido/iceray"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iceoryx-rs = { version = "0.0.13" }
termion = "1.5"
tui = { version = "0.18", default-features = false, features = ["termion"] }
structopt = "0.3"
