[package]
edition = "2018"
name = "iceray"
version = "0.1.0"
authors = ["elBoberido <elboberido@m-hias.de>"]
description = "Introspection TUI for Eclipse iceoryx written in Rust"
readme = "README.md"
keywords = [
    "iceoryx",
    "introspection"
]
license = "Apache-2.0"
repository = "https://github.com/elBoberido/iceray"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iceoryx-rs = { version = "0.1.0" }
termion = "2.0"
ratatui = { version = "0.22", default-features = false, features = ["termion"] }
structopt = "0.3"
